add: refactoring layout outlet list and add outlet image animation

--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -11,6 +11,13 @@
     max-width: 100%;
     margin: 0;
   }
+  .outlet-container .outlet-card:first-child {
+    grid-column: initial;
+  }
+  .outlet-container .outlet-card:last-child {
+    grid-column: initial;
+    grid-row: initial;
+  }
   .navbar-wrapper {
     border: 0;
   }
