--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Croissant+One&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 :root {
   --primary-color: #ff8303;
   --dark-black: #1f1d36;
@@ -147,7 +147,7 @@ body {
   font-size: 1.3em;
   color: var(--dark-black);
   padding: 1rem 0;
-  transition: all 0.3s;
+  transition: all 0.28s;
 }
 
 .list-items.active {
@@ -168,7 +168,7 @@ body {
   min-width: 0;
   border-radius: 0.625rem;
   background-color: var(--primary-color);
-  transition: all 0.3s;
+  transition: all 0.28s;
 }
 
 .list-items:hover::after {
@@ -215,32 +215,38 @@ body {
   position: relative;
   margin-top: 1.875rem;
   max-width: 62.5rem;
+  background-image: linear-gradient( to right top, #636363, #565656, #494949, #3c3c3c, #303030);
+  border-radius: 0.5rem;
 }
 
 .hero .hero-image {
-  max-height: 500px;
+  display: block;
+  height: 500px;
   width: 100%;
   object-fit: cover;
+  object-position: center;
   border-radius: 0.5rem;
-  background-blend-mode: darken;
+  mix-blend-mode: overlay;
 }
 
 .hero .hero-title {
   position: absolute;
-  top: 20%;
+  top: 15%;
   left: 5%;
-  font-size: 4vw;
+  font-family: 'Croissant One', cursive;
+  font-size: 5.9vw;
   letter-spacing: 0.125em;
   color: var(--primary-color);
-  text-shadow: 0 4px 4px rgba(0, 0, 0, 0.5);
+  text-shadow: 0 4px 4px rgba(0, 0, 0, 0.4);
 }
 
 .hero .hero-description {
   position: absolute;
   left: 5%;
-  top: 50%;
+  bottom: 10%;
   max-width: 80%;
-  font-size: 1.8vw;
+  font-size: 3vmin;
+  font-weight: 300;
   line-height: 2em;
   color: var(--white-color);
   text-shadow: 0 4px 4px rgba(0, 0, 0, 0.5);
@@ -461,29 +467,45 @@ body {
 .outlet-container .outlet-card {
   position: relative;
   border-radius: 0.75rem;
-  width: 100%;
+  max-width: 100%;
 }
 
 .outlet-container .outlet-card:first-child {
   grid-column: 1 / span 2;
 }
 
-.outlet-container .outlet-card:last-child {
-  grid-column: 3 / 5;
-  grid-row: 2;
+.outlet-container .outlet-card:nth-child(6) {
+  grid-column: 3 / span 2;
+}
+
+.outlet-container .outlet-card:nth-child(7) {
+  grid-column: 1 / span 2;
+}
+
+.outlet-container .outlet-card:nth-child(12) {
+  grid-column: 3 / span 2;
+}
+
+.outlet-container .outlet-card:nth-child(13) {
+  grid-column: 1 / span 2;
+}
+
+.outlet-container .outlet-card:nth-child(18) {
+  grid-column: 3 / span 2;
 }
 
 .outlet-image-wrapper {
+  position: relative;
   max-width: 100%;
   overflow: hidden;
-  background-color: #833ab4;
   border-radius: 0.75rem;
 }
 
 .outlet-image-wrapper .outlet-image {
+  position: relative;
   display: block;
-  height: 11.25rem;
   width: 100%;
+  height: 12.5rem;
   object-fit: cover;
   object-position: center;
   border-radius: 0.75rem;
@@ -526,7 +548,7 @@ body {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  max-width: 100%;
+  max-width: max-content;
 }
 
 .outlet-rating {
@@ -584,7 +606,7 @@ body {
   display: flex;
   align-items: center;
   column-gap: 1.25rem;
-  margin-bottom: 1.25rem;
+  margin-bottom: 1rem;
   font-size: 1.125em;
   color: var(--dark-black);
 }
