--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -469,6 +469,29 @@ body {
   text-align: right;
 }
 
+.search-container {
+  display: flex;
+  align-items: center;
+  margin: 30px 0 0 0;
+  max-width: 100%;
+}
+
+.search-container .search {
+  display: inline-block;
+  padding: 0.5rem 0.75rem;
+  width: 30%;
+  font-size: 1em;
+  font-weight: 400;
+  color: var(--dark-black);
+  border-radius: 0.75rem;
+  border: 2px solid var(--primary-color);
+}
+
+.search-container .search:focus {
+  box-shadow: 0 0 1px 1px rgba(255, 131, 3, 1), 0 0 1px 2px rgba(255, 131, 3, 1), 0 0 2px 3px rgba(255, 131, 3, 1);
+  outline: none;
+}
+
 .link-container .outlet-link {
   display: none;
   text-decoration: none;
@@ -484,7 +507,6 @@ body {
   place-items: center;
   column-gap: 1.25rem;
   row-gap: 0.8rem;
-  margin-top: 1rem;
   text-align: left;
 }
 
