--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -41,6 +41,9 @@
     max-width: 100%;
     border-radius: 0;
   }
+  .search-container .search {
+    width: 40%;
+  }
   .outlet {
     margin-right: 2.25rem;
     margin-left: 2.25rem;
@@ -65,6 +68,9 @@
 @media (max-width: 62.063rem) {
   .hero .hero-title {
     top: 25%;
+  }
+  .search-container .search {
+    width: 50%;
   }
   .social-items {
     padding: 0.375rem;
@@ -197,6 +203,9 @@
   }
   .hero .hero-image {
     max-height: 70%;
+  }
+  .search-container .search {
+    width: 100%;
   }
   .outlet-container {
     width: 100%;
