--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -23,7 +23,33 @@ html {
 }
 
 body {
-  min-height: 100vh;
+  max-height: 100vh;
+}
+
+.pagenotfound-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 100px auto;
+}
+
+.pagenotfound-container .page-notfound {
+  max-width: 30%;
+}
+
+.pagenotfound-container .home-link {
+  font-size: 1.6em;
+  font-weight: 500;
+}
+
+.pagenotfound-container .home-link:hover {
+  color: #ffc801;
+}
+
+.pagenotfound-container p {
+  font-size: 1em;
+  color: var(--blue-gray);
 }
 
 
@@ -454,7 +480,7 @@ body {
 /* All Food Section */
 
 .all-food {
-  margin-top: 6.25rem;
+  margin-top: 3.125rem;
 }
 
 .another-food {
@@ -465,7 +491,7 @@ body {
 /* Outlest Section */
 
 .outlet {
-  margin-top: 6.25rem;
+  margin-top: 5.125rem;
   text-align: right;
 }
 
@@ -506,6 +532,7 @@ body {
   grid-template-columns: repeat(auto-fit, minmax(14.375rem, 1fr));
   place-items: center;
   column-gap: 1.25rem;
+  margin-top: 1rem;
   row-gap: 0.8rem;
   text-align: left;
 }
