--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -379,8 +379,9 @@ body {
   margin-left: 0.4rem;
 }
 
-.link-container .food-link {
+.link-container a.food-link {
   display: inline-block;
+  padding: 0.563rem 0;
   text-decoration: none;
   font-size: 1.125em;
   font-weight: 600;
@@ -412,8 +413,8 @@ body {
 .food-image {
   position: relative;
   display: block;
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
   object-fit: cover;
   object-position: center;
   border-radius: 0.5rem;
@@ -521,6 +522,7 @@ body {
 .link-container .outlet-link {
   display: none;
   text-decoration: none;
+  padding: 0.563rem 0;
   text-align: right;
   font-size: 1.125em;
   font-weight: 500;
@@ -530,7 +532,6 @@ body {
 .outlet-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(14.375rem, 1fr));
-  place-items: center;
   column-gap: 1.25rem;
   margin-top: 1rem;
   row-gap: 0.8rem;
@@ -583,6 +584,7 @@ body {
 }
 
 .outlet-name {
+  display: inline-block;
   font-size: 1.1em;
   font-weight: 500;
   margin-bottom: 0.188rem;
