--- a/src/styles/detail.css
+++ b/src/styles/detail.css
@@ -38,7 +38,7 @@ li {
   padding: 0.6rem 1.25rem;
   background-color: var(--dark-black);
   border: none;
-  border-radius: 4px;
+  border-radius: 0.25rem;
   font-size: 1em;
   color: var(--white-color);
   cursor: pointer;
@@ -108,7 +108,7 @@ li {
   font-size: 1.6em;
   letter-spacing: 0.056em;
   font-weight: 600;
-  margin-bottom: 4px;
+  margin-bottom: 0.25rem;
 }
 
 .description-wrapper .detail-outlet-description {
@@ -215,7 +215,7 @@ li {
   display: flex;
   align-items: center;
   gap: 0.8rem;
-  padding: 3px 0;
+  padding: 0.188rem 0;
 }
 
 .menu-icon {
@@ -238,7 +238,7 @@ li {
 .menu-location {
   display: flex;
   column-gap: 0.2rem;
-  margin: 4px 0;
+  margin: 0.25rem 0;
   color: var(--gray-color);
 }
 
@@ -255,18 +255,18 @@ li {
   align-items: center;
   justify-items: center;
   margin-left: auto;
-  border-radius: 5px;
+  border-radius: 0.313rem;
   border: 0;
   background-color: var(--primary-color);
 }
 
 .chart-icon {
-  max-width: 14px;
-  margin: 6px;
+  max-width: 0.875rem;
+  margin: 0.375rem;
 }
 
 .menu-price {
-  font-size: 14px;
+  font-size: 0.875em;
   font-weight: 400;
   color: var(--primary-color);
 }
@@ -287,7 +287,7 @@ li {
 
 .review-container {
   columns: 4;
-  column-gap: 20px;
+  column-gap: 1.25rem;
 }
 
 .review-card {
@@ -307,9 +307,9 @@ li {
 
 .desc .review-text {
   padding: 0.9rem;
-  font-size: 14px;
+  font-size: 0.875;
   color: var(--white-color);
-  letter-spacing: 0.8px;
+  letter-spacing: 0.05em;
   font-weight: 300;
   line-height: 1.4rem;
 }
@@ -331,12 +331,12 @@ li {
   align-items: center;
   column-gap: 0.8rem;
   margin-top: 1.6rem;
-  margin-left: 7px;
+  margin-left: 0.438rem;
   padding: 0 0.3rem;
 }
 
 .profile .photo {
-  max-width: 50px;
+  max-width: 3.125rem;
   clip-path: circle();
 }
 
@@ -348,8 +348,8 @@ li {
 }
 
 .profile .date {
-  font-size: 12px;
-  margin-top: 4px;
+  font-size: 0.75em;
+  margin-top: 0.25rem;
   color: var(--gray-color);
 }
 
@@ -363,11 +363,13 @@ li {
   align-items: flex-start;
   margin-bottom: 6.25rem;
   max-width: 50%;
+  max-height: 18.75rem;
 }
 
 .form-container .name-input {
   position: relative;
   width: 100%;
+  margin-bottom: 1rem;
 }
 
 .form-container .detail-input {
@@ -385,13 +387,19 @@ textarea {
   position: relative;
   display: block;
   padding: 0.75rem 1.25rem;
-  margin: 0.9rem 0;
-  border: 2px solid var(--dark-black);
+  /* margin: 0.9rem 0; */
+  border: 2px solid rgba(63, 60, 99, 1);
   border-radius: 0.5rem;
   box-sizing: border-box;
   font-size: 1.125em;
   font-weight: 300;
   width: 100%;
+}
+
+.form-container input[type='text']:focus,
+textarea:focus {
+  box-shadow: 0 0 3px 1px rgba(63, 60, 99, 1), 0 0 5px 2px rgba(66, 63, 100, 1);
+  outline: none;
 }
 
 .count {
@@ -408,7 +416,7 @@ label.count,
 span {
   color: #aaa492;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 0.875em;
 }
 
 .form-container textarea {
