--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -31,7 +31,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 100px auto;
+  margin: 6.25rem auto;
 }
 
 .pagenotfound-container .page-notfound {
@@ -288,7 +288,7 @@ body {
   gap: 1rem;
   align-items: center;
   justify-content: center;
-  margin: 150px auto;
+  margin: 9.375rem auto;
   min-width: 100%;
 }
 
@@ -328,7 +328,7 @@ body {
 }
 
 .excess .excess-title {
-  margin: 4px 0 8px 0;
+  margin: 0.25rem 0 0.5rem 0;
   font-weight: 2.3em;
   font-weight: 700;
   color: var(--dark-black);
@@ -346,7 +346,7 @@ body {
   font-family: 'Croissant One', cursive;
   font-size: 2em;
   text-align: center;
-  font-weight: 500;
+  font-weight: 600;
   color: var(--primary-color);
 }
 
@@ -361,7 +361,7 @@ body {
   padding: 0 0.5rem;
   letter-spacing: 1px;
   font-size: 1em;
-  font-weight: 500;
+  font-weight: 600;
 }
 
 
@@ -393,8 +393,7 @@ body {
 
 .food {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(18.75rem, 1fr));
-  grid-template-rows: auto;
+  grid-template-columns: repeat(auto-fit, minmax(15.625rem, 1fr));
   gap: 0.75rem;
   margin-top: 1rem;
   text-align: left;
@@ -409,18 +408,18 @@ body {
   -webkit-box-shadow: 2px 10px 48px -15px rgba(209, 209, 209, 1);
   -moz-box-shadow: 2px 10px 48px -15px rgba(209, 209, 209, 1);
   box-shadow: 2px 10px 48px -15px rgba(209, 209, 209, 1);
-  border-radius: 0.5rem;
+  border-radius: 0.25rem;
   overflow: hidden;
 }
 
 .food-image {
   position: relative;
   display: block;
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   object-position: center;
-  border-radius: 0.5rem;
+  border-radius: 0.25rem;
   transition: 0.4s;
   transform: scale(1.1);
 }
@@ -433,14 +432,15 @@ body {
   position: absolute;
   bottom: 0;
   left: 0;
+  min-height: 30%;
   width: 100%;
-  padding: 0.313rem 0.625rem;
+  padding: 0 0.625rem;
   background-image: linear-gradient(to top, #202020, transparent);
 }
 
 .food-title {
-  margin-bottom: 2px;
-  font-size: 1.8em;
+  margin-bottom: 0.125rem;
+  font-size: 1.2em;
   font-weight: 600;
   color: var(--white-color);
 }
@@ -467,15 +467,15 @@ body {
 .badge {
   position: absolute;
   top: 0;
-  right: 0;
+  left: 0;
   background: var(--badge-color);
   max-width: max-content;
-  padding: 0.625rem 1em;
+  padding: 0.25rem 0.75rem;
   font-weight: 500;
   font-size: 1em;
   color: var(--white-color);
-  border-top-right-radius: 0.5rem;
-  border-bottom-left-radius: 0.5rem;
+  border-top-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
   box-shadow: 0 43px 181px rgba(27, 26, 23, 0.07), 0 19.1268px 79.4118px rgba(27, 26, 23, 0.0456112), 0 13.3398px 53.9366px rgba(27, 26, 23, 0.035), 0 7.20765px 29.2138px rgba(27, 26, 23, 0.0243888);
   opacity: 0.9;
 }
@@ -502,7 +502,7 @@ body {
 .search-container {
   display: flex;
   align-items: center;
-  margin: 30px 0 0 0;
+  margin-top: 1.875rem;
   max-width: 100%;
 }
 
@@ -518,7 +518,7 @@ body {
 }
 
 .search-container .search:focus {
-  box-shadow: 0 0 1px 1px rgba(255, 131, 3, 1), 0 0 1px 2px rgba(255, 131, 3, 1), 0 0 2px 3px rgba(255, 131, 3, 1);
+  box-shadow: 0 0 3px 1px rgba(255, 131, 3, 1), 0 0 5px 2px rgba(248, 136, 23, 1);
   outline: none;
 }
 
@@ -536,7 +536,6 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(14.375rem, 1fr));
   column-gap: 1.25rem;
-  margin-top: 1rem;
   row-gap: 0.8rem;
   text-align: left;
 }
