--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -408,7 +408,7 @@ body {
   -webkit-box-shadow: 2px 10px 48px -15px rgba(209, 209, 209, 1);
   -moz-box-shadow: 2px 10px 48px -15px rgba(209, 209, 209, 1);
   box-shadow: 2px 10px 48px -15px rgba(209, 209, 209, 1);
-  border-radius: 0.25rem;
+  border-radius: 0.5rem;
   overflow: hidden;
 }
 
@@ -419,7 +419,7 @@ body {
   height: 100%;
   object-fit: cover;
   object-position: center;
-  border-radius: 0.25rem;
+  border-radius: 0.5rem;
   transition: 0.4s;
   transform: scale(1.1);
 }
@@ -443,6 +443,7 @@ body {
   font-size: 1.5em;
   font-weight: 600;
   color: var(--white-color);
+  text-shadow: 0 4px 4px rgba(0, 0, 0, 0.5);
 }
 
 .location {
@@ -451,31 +452,33 @@ body {
   margin-bottom: 0.188rem;
   font-weight: 400;
   color: var(--white-color);
+  margin-bottom: 0.25rem;
 }
 
 .location-icon {
-  max-width: 0.7rem;
   margin-right: 0.313rem;
+  max-width: 0.7rem;
   color: var(--white-color);
 }
 
 .price {
   font-weight: 500;
   color: var(--primary-color);
+  margin-bottom: 0.25rem;
 }
 
 .badge {
   position: absolute;
   top: 0;
-  left: 0;
+  right: 0;
   background: var(--badge-color);
   max-width: max-content;
-  padding: 0.25rem 0.75rem;
+  padding: 0.5rem 0.75rem;
   font-weight: 500;
   font-size: 1em;
   color: var(--white-color);
-  border-top-left-radius: 0.25rem;
-  border-bottom-right-radius: 0.25rem;
+  border-top-right-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
   box-shadow: 0 43px 181px rgba(27, 26, 23, 0.07), 0 19.1268px 79.4118px rgba(27, 26, 23, 0.0456112), 0 13.3398px 53.9366px rgba(27, 26, 23, 0.035), 0 7.20765px 29.2138px rgba(27, 26, 23, 0.0243888);
   opacity: 0.9;
 }
@@ -501,9 +504,16 @@ body {
 
 .search-container {
   display: flex;
-  align-items: center;
-  margin-top: 1.875rem;
+  flex-direction: column;
+  align-items: flex-start;
   max-width: 100%;
+}
+
+.search-container label {
+  margin-bottom: 0.25rem;
+  font-weight: 500;
+  font-size: 1em;
+  color: var(--primary-color);
 }
 
 .search-container .search {
